...
              ensure: () => {
                _this.refs.ai.hide();
              },
              success: (data) => {
                NotificationCenter.dispatchEvent(EVENT_SCENE);
                Navigation.dismissModal(_this.props.componentId);
                Alert.alert('Scenes', 'Successful');
              },
              error: (data) => {
                Alert.alert(_.uniq(data).join('\n'));
              },
            },
          );
...
                      styles.accountView,
                      {
                        borderColor: Tme('inputBorderColor'),
                      },
                    ]}>
                    <TextInput
                      testID="scene_input"
                      placeholderTextColor={Tme('placeholder')}
                      style={Colors.TextInputStyle()}
                      autoCapitalize="none"
                      editable={!this.scene.is_system}
                      underlineColorAndroid="transparent"
                      placeholder="Scene name"
...
