...
          Colors.CardShadowStyle(),
          this.props.styles,
        ]}>
        {this.props.children}
        {this.props.showMenu ? (
          <TouchableOpacity
            testID="card_menu"
            activeOpacity={0.8}
            hitSlop={{top: 20, right: 20, bottom: 20, left: 20}}
            onPress={this.props.showMenu}>
            <MCIcons
              name="dots-vertical"
              size={30}
...
