...
                    icon: sources[2],
                    selectedIcon: sources[2],
                    selectedIconColor: Colors.MainColor,
                    selectedTextColor: Colors.MainColor,
                    selectedFontSize: 12,
                    textColor: '#9497A0',
                    testID: 'SCENE',
                    fontWeight: 'medium',
                  },
                },
              },
            },
            {
...
