...
      });
      show = true;
    }
    if (show) {
      return (
        <TouchableOpacity
          testID="select_item"
          activeOpacity={1.0}
          style={{
            backgroundColor: Tme('cardColor'),
            flex: 1,
            flexDirection: 'row',
          }}
...
